// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Result > Result customVue demo works fine 1`] = `
<div
  class="t-result t-result--theme-default"
>
  <div
    class="t-result__thumb"
  >
    
    <div
      class="t-image t-image--square external-class-image"
    >
      <div
        class="t-image__mask"
      >
        <div
          class="t-loading"
          style="font-size: 20px;"
        >
          <div
            class="t-loading__dots"
            style="animation-duration: 800ms; width: 20px; height: 20px;"
          >
            
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
            />
            
          </div>
          <!---->
          <!---->
        </div>
      </div>
      <picture>
        <!---->
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/mobile/demos/result1.png"
          style="object-fit: fill; object-position: center;"
        />
      </picture>
    </div>
    
  </div>
  <div
    class="t-result__title"
  >
    
    <div>
      自定义结果
    </div>
    
  </div>
  <div
    class="t-result__description"
  >
    
    <div>
      描述文字
    </div>
    
  </div>
</div>
`;

exports[`Result > Result mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-f5693a74=""
>
  <h1
    class="title"
    data-v-f5693a74=""
  >
    Result 结果
  </h1>
  <p
    class="summary"
    data-v-f5693a74=""
  >
    结果反馈
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-f5693a74=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-f5693a74=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        不同结果状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div>
        <div
          class="t-result t-result--theme-success space"
        >
          <div
            class="t-result__thumb"
          >
            <svg
              class="t-icon t-icon-check-circle t-result__icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21ZM23 12C23 18.0751 18.0751 23 12 23C5.92487 23 0.999999 18.0751 1 12C1 5.92487 5.92487 0.999999 12 1C18.0751 1 23 5.92487 23 12ZM10.5 16.4142L6.08578 12L7.5 10.5858L10.5 13.5858L16.5 7.58579L17.9142 9L10.5 16.4142Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="t-result__title"
          >
            成功状态
          </div>
          <div
            class="t-result__description"
          >
            描述文字
          </div>
        </div>
      </div>
      <div>
        <div
          class="t-result t-result--theme-error space"
        >
          <div
            class="t-result__thumb"
          >
            <svg
              class="t-icon t-icon-close-circle t-result__icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21ZM23 12C23 18.0751 18.0751 23 12 23C5.92487 23 0.999999 18.0751 1 12C1 5.92487 5.92487 0.999999 12 1C18.0751 1 23 5.92487 23 12ZM7.40347 15.1823L10.5858 12L7.40347 8.81768L8.81768 7.40347L12 10.5858L15.1816 7.40415L16.5959 8.81836L13.4142 12L16.5959 15.1816L15.1816 16.5959L12 13.4142L8.81768 16.5965L7.40347 15.1823Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="t-result__title"
          >
            失败状态
          </div>
          <div
            class="t-result__description"
          >
            描述文字
          </div>
        </div>
      </div>
      <div>
        <div
          class="t-result t-result--theme-warning space"
        >
          <div
            class="t-result__thumb"
          >
            <svg
              class="t-icon t-icon-info-circle t-result__icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21ZM23 12C23 18.0751 18.0751 23 12 23C5.92487 23 0.999999 18.0751 1 12C1 5.92487 5.92487 0.999999 12 1C18.0751 1 23 5.92487 23 12ZM11 17.5L11 10H13L13 17.5L11 17.5ZM13 8.5H10.9961L10.9961 6.49609H13L13 8.5Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="t-result__title"
          >
            警示状态
          </div>
          <div
            class="t-result__description"
          >
            描述文字
          </div>
        </div>
      </div>
      <div>
        <div
          class="t-result t-result--theme-default space"
        >
          <div
            class="t-result__thumb"
          >
            <svg
              class="t-icon t-icon-info-circle t-result__icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21ZM23 12C23 18.0751 18.0751 23 12 23C5.92487 23 0.999999 18.0751 1 12C1 5.92487 5.92487 0.999999 12 1C18.0751 1 23 5.92487 23 12ZM11 17.5L11 10H13L13 17.5L11 17.5ZM13 8.5H10.9961L10.9961 6.49609H13L13 8.5Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="t-result__title"
          >
            默认状态
          </div>
          <div
            class="t-result__description"
          >
            描述文字
          </div>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-f5693a74=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义结果
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-result t-result--theme-default"
        data-v-f5693a74=""
      >
        <div
          class="t-result__thumb"
        >
          
          <div
            class="t-image t-image--square external-class-image"
          >
            <div
              class="t-image__mask"
            >
              <div
                class="t-loading"
                style="font-size: 20px;"
              >
                <div
                  class="t-loading__dots"
                  style="animation-duration: 800ms; width: 20px; height: 20px;"
                >
                  
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                  />
                  
                </div>
                <!---->
                <!---->
              </div>
            </div>
            <picture>
              <!---->
              <img
                alt=""
                class="t-image__img"
                src="https://tdesign.gtimg.com/mobile/demos/result1.png"
                style="object-fit: fill; object-position: center;"
              />
            </picture>
          </div>
          
        </div>
        <div
          class="t-result__title"
        >
          
          <div>
            自定义结果
          </div>
          
        </div>
        <div
          class="t-result__description"
        >
          
          <div>
            描述文字
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-f5693a74=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        页面位置展示
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="padding"
        data-v-f5693a74=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-f5693a74=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
             页面位置展示 
            
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Result > Result themeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div>
    <div
      class="t-result t-result--theme-success space"
    >
      <div
        class="t-result__thumb"
      >
        <svg
          class="t-icon t-icon-check-circle t-result__icon"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21ZM23 12C23 18.0751 18.0751 23 12 23C5.92487 23 0.999999 18.0751 1 12C1 5.92487 5.92487 0.999999 12 1C18.0751 1 23 5.92487 23 12ZM10.5 16.4142L6.08578 12L7.5 10.5858L10.5 13.5858L16.5 7.58579L17.9142 9L10.5 16.4142Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-result__title"
      >
        成功状态
      </div>
      <div
        class="t-result__description"
      >
        描述文字
      </div>
    </div>
  </div>
  <div>
    <div
      class="t-result t-result--theme-error space"
    >
      <div
        class="t-result__thumb"
      >
        <svg
          class="t-icon t-icon-close-circle t-result__icon"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21ZM23 12C23 18.0751 18.0751 23 12 23C5.92487 23 0.999999 18.0751 1 12C1 5.92487 5.92487 0.999999 12 1C18.0751 1 23 5.92487 23 12ZM7.40347 15.1823L10.5858 12L7.40347 8.81768L8.81768 7.40347L12 10.5858L15.1816 7.40415L16.5959 8.81836L13.4142 12L16.5959 15.1816L15.1816 16.5959L12 13.4142L8.81768 16.5965L7.40347 15.1823Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-result__title"
      >
        失败状态
      </div>
      <div
        class="t-result__description"
      >
        描述文字
      </div>
    </div>
  </div>
  <div>
    <div
      class="t-result t-result--theme-warning space"
    >
      <div
        class="t-result__thumb"
      >
        <svg
          class="t-icon t-icon-info-circle t-result__icon"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21ZM23 12C23 18.0751 18.0751 23 12 23C5.92487 23 0.999999 18.0751 1 12C1 5.92487 5.92487 0.999999 12 1C18.0751 1 23 5.92487 23 12ZM11 17.5L11 10H13L13 17.5L11 17.5ZM13 8.5H10.9961L10.9961 6.49609H13L13 8.5Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-result__title"
      >
        警示状态
      </div>
      <div
        class="t-result__description"
      >
        描述文字
      </div>
    </div>
  </div>
  <div>
    <div
      class="t-result t-result--theme-default space"
    >
      <div
        class="t-result__thumb"
      >
        <svg
          class="t-icon t-icon-info-circle t-result__icon"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21ZM23 12C23 18.0751 18.0751 23 12 23C5.92487 23 0.999999 18.0751 1 12C1 5.92487 5.92487 0.999999 12 1C18.0751 1 23 5.92487 23 12ZM11 17.5L11 10H13L13 17.5L11 17.5ZM13 8.5H10.9961L10.9961 6.49609H13L13 8.5Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-result__title"
      >
        默认状态
      </div>
      <div
        class="t-result__description"
      >
        描述文字
      </div>
    </div>
  </div>
  
</div>
`;
